Problem:(CRO-613) fails to compile with signatory 0.16 (#4)
solution: update signature to version 0.16 and use signature crate 1.0.0-pre.1

--- a/tendermint/Cargo.toml
+++ b/tendermint/Cargo.toml
@@ -37,8 +37,10 @@ prost-amino-derive = { version = "0.4.0" }
 rand_os = { version = "0.1" }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
-signatory = { version = "0.12", features = ["ed25519", "ecdsa"] }
-signatory-dalek = { version = "0.12" }
+signatory = { version = "0.16", features = ["ed25519", "ecdsa"] }
+signatory-dalek = { version = "0.16" }
+signatory-secp256k1 = { version = "0.16" }
+signature = { version = "1.0.0-pre.1", default-features = false }
 sha2 = { version = "0.8", default-features = false }
 subtle = "2"
 subtle-encoding = { version = "0.3", features = ["bech32-preview"] }
