--- a/tendermint/Cargo.toml
+++ b/tendermint/Cargo.toml
@@ -39,7 +39,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 signatory = { version = "0.16", features = ["ed25519", "ecdsa"] }
 signatory-dalek = { version = "0.16" }
-signatory-secp256k1 = { version = "0.16" }
+signatory-secp256k1 = { version = "0.16", optional = true }
 signature = { version = "1.0.0-pre.1", default-features = false }
 sha2 = { version = "0.8", default-features = false }
 subtle = "2"
@@ -54,3 +54,7 @@ serde_json = "1"
 
 [package.metadata.docs.rs]
 all-features = true
+
+[features]
+default = ["secp256k1"]
+secp256k1 = ["signatory-secp256k1"]
