--- a/tendermint/Cargo.toml
+++ b/tendermint/Cargo.toml
@@ -37,17 +37,16 @@ prost-amino-derive = { version = "0.4.0" }
 rand_os = { version = "0.1" }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
-signatory = { version = "0.16", features = ["ed25519", "ecdsa"] }
-signatory-dalek = { version = "0.16" }
-signatory-secp256k1 = { version = "0.16", optional = true }
-signature = { version = "1.0.0-pre.1", default-features = false }
+signatory = { version = "0.17", features = ["ed25519", "ecdsa"] }
+signatory-dalek = "0.17"
+signatory-secp256k1 = { version = "0.17", optional = true }
 sha2 = { version = "0.8", default-features = false }
 subtle = "2"
 subtle-encoding = { version = "0.3", features = ["bech32-preview"] }
 tai64 = { version = "3", features = ["chrono"] }
 toml = { version = "0.5" }
 uuid = { version = "0.7", default-features = false }
-zeroize = { version = "0.9" }
+zeroize = { version = "1.1", features = ["zeroize_derive"] }
 
 [dev-dependencies]
 serde_json = "1"
